tests/errors/tc_expr_call_undefined.lx
@module "main"

pub const main -> fn () int {
    undefined_function();
    return 0;
}
